<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.prices_coinz_fragment">


    <TextView
        android:id="@+id/tv_prices_coinz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="40dp"
        android:fontFamily="@font/swissra_bold"
        android:text="@string/prices_coinz"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_last_update"
            android:layout_marginStart="40dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_time_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/tv_time_last_update"
            android:fontFamily="@font/font_date"
            android:textAlignment="viewEnd"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_library2"
                android:layout_width="155dp"
                android:layout_height="96dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/color1"
                    >

                    <ImageView
                        android:id="@+id/iv_card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/xrpp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name_card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tv_name_card2"
                        android:fontFamily="@font/swissra_bold"
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_card2"
                         />

                    <TextView
                        android:id="@+id/tv_prices_card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_prices_card2"
                        android:textSize="11sp"
                        android:fontFamily="@font/semibold"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/tv_name_card2"
                        app:layout_constraintStart_toStartOf="@+id/tv_name_card2"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_card2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_library1"
                android:layout_width="155dp"
                android:layout_height="96dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/color"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/btc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name_card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/swissra_bold"
                        android:textSize="10sp"
                        android:text="@string/tv_name_card1"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_card1" />

                    <TextView
                        android:id="@+id/tv_prices_card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semibold"
                        android:textSize="11sp"
                        android:text="@string/tv_prices_card1"
                        android:textColor="@color/white"

                        app:layout_constraintEnd_toEndOf="@+id/tv_name_card1"
                        app:layout_constraintStart_toStartOf="@+id/tv_name_card1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_card1" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_library4"
                android:layout_width="155dp"
                android:layout_height="96dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/color3"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_card4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ethh"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name_card4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/swissra_bold"
                        android:text="@string/tv_name_card4"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_card4" />

                    <TextView
                        android:id="@+id/tv_prices_card4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semibold"
                        android:text="@string/tv_prices_card4"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_name_card4"
                        app:layout_constraintStart_toStartOf="@+id/tv_name_card4"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_card4" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/add_card"
                android:layout_width="155dp"
                android:layout_height="96dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/const_layout"
                    android:background="@color/color_backg_card">

                    <ImageView
                        android:id="@+id/add_iv_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/icons_plus"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.503"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/add_tv_name_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/swissra_bold"
                        android:text="@string/tv_name_card3"
                        android:textColor="@color/color_text_card"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/add_iv_card"
                        app:layout_constraintStart_toStartOf="@+id/add_iv_card"
                        app:layout_constraintTop_toBottomOf="@+id/add_iv_card" />

                    <TextView
                        android:id="@+id/add_tv_prices_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semibold"
                        android:text="@string/tv_prices_card4"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@+id/add_tv_name_card"
                        app:layout_constraintStart_toStartOf="@+id/add_tv_name_card"
                        app:layout_constraintTop_toBottomOf="@+id/add_tv_name_card" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_backg_card"
        android:orientation="horizontal"
        android:padding="9dp">

        <TextView
            android:id="@+id/tv_coinz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/swissra_normal"
            android:text="@string/tv_coinz"
            android:textAlignment="center"
            android:textColor="@color/color_text_coin"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_trading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/swissra_normal"
            android:text="@string/tv_trading"
            android:textAlignment="center"
            android:textColor="@color/color_text_coin"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/swissra_normal"

            android:text="@string/tv_prices"
            android:textAlignment="center"
            android:textColor="@color/color_text_coin"
            android:textSize="9sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_prices_coinz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/coinz_item"
         />

</LinearLayout>